--- a/cssmain.css
+++ b/cssmain.css
@@ -1,13 +1,32 @@
 
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;   background-color: purple;
-}
-.parent{
-    display:grid;
-    grid-template-columns: 1fr 1fr;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;   background-color: purple;}
+#banner{display: flex;
+width: 100%;
+box-sizing: border-box;
+margin: auto;
+position: sticky;
+background-color: yellow;}
 
+#pictureofme{
+    max-width: 100%;
+    height: auto;
+  }
+
+
+.parent:nth-of-type(2){display: flex;
+    width: 100%;
+    box-sizing: border-box;
+    margin: auto;
+    position: static;
 }
+
+.parent:nth-of-type(3){
+    display: grid;
+    grid-template-columns: 1fr 1fr;}
+
+
 
 div{
 font-size: 2rem;
@@ -16,11 +35,16 @@ text-align: center;
 
 }
 
-div:nth-of-type(1) {background-color: green;} 
-div:nth-of-type(2) {background-color: greenyellow;}
-div:nth-of-type(3) {background-color: rgba(50, 196, 10, 0.322);}
-div:nth-of-type(4) {background-color: rgb(23, 163, 23);}
+#me{background-color: green;} 
+#education{background-color: greenyellow;}
+#hobbies{background-color: rgba(50, 196, 10);}
+#work{background-color: rgb(23, 163, 23);}
+
 
 a:hover {color: goldenrod; text-size-adjust: 110%;}
 a:link {text-decoration: none;}
+a:nth-of-type(1){margin: auto; min-width: 20%;}
+a:nth-of-type(2){margin: auto;min-width: 20%;}
+a:nth-of-type(3){margin: auto;min-width: 20%;}
+a:nth-of-type(4){margin: auto;min-width: 20%;}
 
