--- a/cssmain.css
+++ b/cssmain.css
@@ -1,16 +1,23 @@
-
-
+*{color: black;}
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;   background-color: purple;}
+    font-family: Verdana, Geneva, Tahoma, sans-serif;   background-image: url("blueback.jpg"); background-repeat: no-repeat; background-size: cover;
+        margin: 0;
+        }
 #banner{display: flex;
 width: 100%;
+height: auto;
 box-sizing: border-box;
-margin: auto;
-position: sticky;
-background-color: yellow;}
+margin: 0;
+padding: 0;
+position: fixed;
+background-color: rgb(17, 17, 200);
+}
+
+
 
 #pictureofme{
     max-width: 100%;
+    max-height: 500px;
     height: auto;
   }
 
@@ -22,9 +29,24 @@ background-color: yellow;}
     position: static;
 }
 
+
 .parent:nth-of-type(3){
     display: grid;
     grid-template-columns: 1fr 1fr;}
+
+@media (max-width: 1000px) { 
+    #banner{display: grid;
+    grid-template-columns: 1fr; }
+    
+    .parent:nth-of-type(2){
+    display: grid;
+    grid-template-columns:  1fr;}
+    
+    .parent:nth-of-type(3){
+    display: grid;
+grid-template-columns: 1fr;}
+    
+}
 
 
 
@@ -35,15 +57,15 @@ text-align: center;
 
 }
 
-#me{background-color: green;} 
-#education{background-color: greenyellow;}
-#hobbies{background-color: rgba(50, 196, 10);}
-#work{background-color: rgb(23, 163, 23);}
+#me{background-color: Blue;} 
+#education{background-color: lightskyblue;}
+#hobbies{background-color:darkcyan;}
+#work{background-color: rgb(2, 2, 179);}
 
 
 a:hover {color: goldenrod; text-size-adjust: 110%;}
 a:link {text-decoration: none;}
-a:nth-of-type(1){margin: auto; min-width: 20%;}
+a:nth-of-type(1){margin: auto;min-width: 20%;}
 a:nth-of-type(2){margin: auto;min-width: 20%;}
 a:nth-of-type(3){margin: auto;min-width: 20%;}
 a:nth-of-type(4){margin: auto;min-width: 20%;}
